# libpdr

./: .gitmodules  CMakeLists.txt  README.md
example/: server.cpp
include/: libpdr.h
src/: libpdr.cpp  protocol.cpp  protocol_define.cpp  soap.cpp  ssdp.cpp
